# MooseMCP

./: README.md
pythonClient/: README.md  mathServer.py  mistralClient.py  mooseMCPClient.py  mooseMCPServer.py  pyproject.toml  requirements.txt
resources/: jrcp-uml.plantuml  mcp-server.plantuml
src/BaselineOfMooseMCP/: BaselineOfMooseMCP.class.st  BaselineofMooseMCP.class.st  package.st
src/MooseMCP/: MMCPAbstractServer.class.st  MMCPCommand.class.st  MMCPEntitySetCommand.class.st  MMCPEntitySetRegistry.class.st  MMCPFilterSetCommand.class.st  MMCPGetEntityCommand.class.st  MMCPGetMetricsCommand.class.st  MMCPGetRelationshipsCommand.class.st  MMCPListModelsCommand.class.st  MMCPMaterializeCommand.class.st  MMCPQueryCommand.class.st  MMCPRemoveSetCommand.class.st  MMCPRenderVisualizationCommand.class.st  MMCPResource.class.st  MMCPResourceServer.class.st  MMCPServer.class.st  MMCPServerById.class.st  MMCPServerByName.class.st  MMCPServerFormatter.class.st  MMCPServerIdInterface.class.st  (+23 more)
src/MooseMCP-Tests/: MMCPEntitySetRegistryTest.class.st  MMCPToolFilterSetTest.class.st  MMCPToolGetEntityTest.class.st  MMCPToolGetMetricsTest.class.st  MMCPToolGetRelationshipsTest.class.st  MMCPToolListModelsTest.class.st  MMCPToolMaterializeTest.class.st  MMCPToolOnResultSetTestCase.class.st  MMCPToolQueryTest.class.st  MMCPToolRemoveSetTest.class.st  MMCPToolRenderVisualizationTest.class.st  MMCPToolServerTest.class.st  MMCPToolTestCase.class.st  MMCPToolTraverseTest.class.st  MooseMCPBuiltInRegistrationTest.class.st  MooseMCPToolDispatchTest.class.st  package.st
