[project]
name = "pythonclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-groq>=0.3.7",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-mistralai>=0.2.11",
    "langgraph>=0.6.6",
    "mcp>=1.13.1",
    "mistralai>=1.10.1",
    "openai>=2.15.0",
    "requests>=2.32.5",
]
